Update elassandra JVM options
(cherry picked from commit 19fd427b4fdb474b0fd7f2451b19f2f60738234d)